--- a/ios/BookingApp.xcodeproj/xcshareddata/xcschemes/BookingApp.xcscheme
+++ b/ios/BookingApp.xcodeproj/xcshareddata/xcschemes/BookingApp.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "HiDO Health.app"
+               BuildableName = "BookingApp.app"
                BlueprintName = "BookingApp"
                ReferencedContainer = "container:BookingApp.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "HiDO Health.app"
+            BuildableName = "BookingApp.app"
             BlueprintName = "BookingApp"
             ReferencedContainer = "container:BookingApp.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "HiDO Health.app"
+            BuildableName = "BookingApp.app"
             BlueprintName = "BookingApp"
             ReferencedContainer = "container:BookingApp.xcodeproj">
          </BuildableReference>
