--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jest": "^29.6.3",
     "patch-package": "^8.0.0",
     "prettier": "2.8.8",
+    "react-native-asset": "^2.1.1",
     "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
